--- a/languages/es_MX.po
+++ b/languages/es_MX.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Mandir\n"
-"POT-Creation-Date: 2017-06-27 20:07-0600\n"
-"PO-Revision-Date: 2017-07-15 11:32-0600\n"
+"POT-Creation-Date: 2017-07-28 18:31-0600\n"
+"PO-Revision-Date: 2017-07-28 18:31-0600\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_MX\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.0.2\n"
+"X-Generator: Poedit 2.0.3\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
@@ -45,15 +45,15 @@ msgstr "Intentá buscar en los archivos mensuales. %1$s"
 #: assets/vendors/image-processing-queue/vendor/a5hleyrich/wp-background-processing/classes/wp-background-process.php:422
 #, php-format
 msgid "Every %d Minutes"
-msgstr ""
+msgstr "Cada %d minutos"
 
 #: comments.php:31
 #, php-format
 msgctxt "comments title"
 msgid "One thought on &ldquo;%2$s&rdquo;"
 msgid_plural "%1$s thoughts on &ldquo;%2$s&rdquo;"
-msgstr[0] "Una idea en &ldquo;%2$s&rdquo;"
-msgstr[1] ""
+msgstr[0] "Una idea sobre &ldquo;%2$s&rdquo;"
+msgstr[1] "%1$s ideas sobre &ldquo;%2$s&rdquo;"
 
 #: comments.php:40 comments.php:61
 msgid "Comment navigation"
@@ -71,10 +71,6 @@ msgstr "Comentarios más recientes"
 msgid "Comments are closed."
 msgstr "Comentarios cerrados."
 
-#: footer.php:26
-msgid "Subscribe to our newsletter"
-msgstr "Suscribite a muestro boletín"
-
 #: footer.php:29
 msgid "All rights reserved"
 msgstr "Todos los derechos reservados"
@@ -85,15 +81,16 @@ msgstr "Iconos de redes sociales"
 
 #: includes/customizer-socialmedia.php:36
 msgid "Add the URL for each of your social profiles."
-msgstr "Agregá la dirección URL para cada uno de tus perfiles sociales."
+msgstr ""
+"Agregá la dirección URL para cada uno de tus perfiles de redes sociales."
 
 #: includes/setup.php:41
 msgid "Primary Menu"
-msgstr "Menú Principal"
+msgstr "Menú principal"
 
 #: includes/setup.php:42
 msgid "Secondary Menu"
-msgstr "Menú Secundario"
+msgstr "Menú secundario"
 
 #: includes/setup.php:43
 msgid "Tablet Primary Menu"
@@ -105,7 +102,7 @@ msgstr "Menú principal móvil"
 
 #: includes/setup.php:45
 msgid "Mobile Menu"
-msgstr "Menú para móvil:"
+msgstr "Menú para móvil"
 
 #: includes/sidebars.php:11
 msgid "Sidebar"
@@ -151,11 +148,10 @@ msgid "% Comments"
 msgstr "% Comentarios"
 
 #. translators: %s: Name of current post
-#: includes/template-tags.php:66
+#: includes/template-tags.php:66 template-parts/_content-page.php:34
 #: template-parts/content-page-stripped-end.php:16
-#: template-parts/content-page.php:31
-#: template-parts/page/content-schedule.php:253
-#: template-parts/team/content-single.php:25
+#: template-parts/page/content-page.php:34
+#: template-parts/team/content-single.php:39
 #, php-format
 msgid "Edit %s"
 msgstr "Editar %s"
@@ -165,7 +161,36 @@ msgstr "Editar %s"
 msgid "Search Results for: %s"
 msgstr "Resultados de la búsqueda para: %s"
 
-#: template-parts/content-announcementbar.php:38
+#: template-parts/_content-page.php:23 template-parts/content-single.php:24
+#: template-parts/content.php:34 template-parts/event/content-single.php:54
+#: template-parts/page/content-page.php:23
+msgid "Pages:"
+msgstr "Páginas:"
+
+#: template-parts/certification/content-curriculum.php:7
+msgid "Curriculum"
+msgstr "Currículum"
+
+#: template-parts/certification/content-sidebar-orientation.php:12
+msgid "Orientation"
+msgstr "Orientación"
+
+#: template-parts/certification/content-sidebar-pricing.php:9
+#: template-parts/certification/content-sidebar-training.php:50
+#: template-parts/event/content-single.php:160
+msgid "Cost"
+msgstr "Inversión"
+
+#: template-parts/certification/content-sidebar-training.php:37
+#: template-parts/certification/content-sidebar.php:36
+msgid "Schedule"
+msgstr "Horario"
+
+#: template-parts/certification/content-sidebar.php:16
+msgid "Duration"
+msgstr "Duración"
+
+#: template-parts/content-announcementbar.php:39
 msgid "x"
 msgstr "x"
 
@@ -178,7 +203,7 @@ msgstr "No se encontró nada"
 msgid ""
 "Ready to publish your first post? <a href=\"%1$s\">Get started here</a>."
 msgstr ""
-"Listo para publicar tu primera entrada?  <a href=\"%1$s\">Empezá aquí</a>."
+"Listo para publicar tu primera entrada? <a href=\"%1$s\">Empezá aquí</a>."
 
 #: template-parts/content-none.php:23
 msgid ""
@@ -196,11 +221,6 @@ msgstr ""
 "Parece que no podemos encontrar lo que estás buscando. Talvez una búsqueda "
 "pueda ayudar."
 
-#: template-parts/content-page.php:20 template-parts/content-single.php:24
-#: template-parts/content.php:34 template-parts/event/content-single.php:52
-msgid "Pages:"
-msgstr "Páginas:"
-
 #. translators: %s: Name of current post.
 #: template-parts/content.php:27
 #, php-format
@@ -211,71 +231,83 @@ msgstr "Seguir leyendo %s <span class=\"meta-nav\">&rarr;</span>"
 msgid "More information"
 msgstr "Más información"
 
-#: template-parts/event/content-single.php:121
+#: template-parts/event/content-single.php:120
 msgid "Important information"
 msgstr "Información importante"
 
-#: template-parts/event/content-single.php:124
+#: template-parts/event/content-single.php:123
 msgid "Dates"
 msgstr "Fechas"
 
-#: template-parts/event/content-single.php:146
+#: template-parts/event/content-single.php:141
 msgid "Venue"
 msgstr "Lugar"
 
-#: template-parts/event/content-single.php:165
-msgid "Costs"
-msgstr "Inversión"
+#: template-parts/event/content-single.php:167
+msgid "Free"
+msgstr "Gratis"
 
-#: template-parts/event/content-single.php:206
+#: template-parts/event/content-single.php:180
+msgid "Voluntary donation"
+msgstr "Donación voluntaria"
+
+#: template-parts/event/content-single.php:182
+msgid "Suggested: "
+msgstr "Sugerida: "
+
+#: template-parts/event/content-single.php:203
+msgid "Regular price"
+msgstr "Precio normal"
+
+#: template-parts/event/content-single.php:237
 msgid "Reserve your spot"
-msgstr "Reserv&aacute; tu espacio"
+msgstr "Reservá tu espacio"
 
-#: template-parts/page/content-pricing.php:14
+#: template-parts/page/content-pricing.php:13
 msgid "Pricing"
 msgstr "Tarifas"
 
-#: template-parts/page/content-pricing.php:53
+#: template-parts/page/content-pricing.php:31
 msgid "1 class per week"
 msgstr "1 clase por semana"
 
-#: template-parts/page/content-pricing.php:54
+#: template-parts/page/content-pricing.php:32
 msgid "4 classes per month"
 msgstr "4 clases por mes"
 
-#: template-parts/page/content-pricing.php:62
+#: template-parts/page/content-pricing.php:40
 msgid "2 classes per week"
 msgstr "2 clases por semana"
 
-#: template-parts/page/content-pricing.php:63
+#: template-parts/page/content-pricing.php:41
 msgid "8 classes per month"
 msgstr "8 clases por mes"
 
-#: template-parts/page/content-pricing.php:71
+#: template-parts/page/content-pricing.php:49
 msgid "3 classes per week"
 msgstr "3 clases por semana"
 
-#: template-parts/page/content-pricing.php:72
+#: template-parts/page/content-pricing.php:50
 msgid "12 classes per month"
-msgstr "2 clases por mes"
+msgstr "12 clases por mes"
 
-#: template-parts/page/content-pricing.php:80
+#: template-parts/page/content-pricing.php:58
 msgid "Unlimited classes"
 msgstr "Clases ilimitadas"
 
-#: template-parts/page/content-pricing.php:91
+#: template-parts/page/content-pricing.php:69
 msgid "Single class"
 msgstr "Clase suelta"
 
-#: template-parts/page/content-pricing.php:95
+#: template-parts/page/content-pricing.php:73
 msgid "1 class"
 msgstr "1 clase"
 
-#: template-parts/page/content-pricing.php:99
+#: template-parts/page/content-pricing.php:77
 msgid "Membership"
 msgstr "Matrícula"
 
-#: template-parts/page/content-pricing.php:103
+#: template-parts/page/content-pricing.php:81
 msgid "Per year"
 msgstr "Por 1 año"
 
@@ -303,11 +335,11 @@ msgstr "Viernes"
 msgid "Saturday"
 msgstr "Sábado"
 
-#: template-parts/page/content-schedule.php:209
+#: template-parts/page/content-schedule.php:196
 msgid "Read more"
-msgstr "Más información"
+msgstr "Seguir leyendo"
 
-#: template-parts/store/content-products.php:9
+#: template-parts/store/content-products.php:8
 msgid "Other products"
 msgstr "Otros productos"
 
@@ -331,5 +363,49 @@ msgstr ""
 msgid "http://matilderosero.com"
 msgstr ""
 
-#~ msgid "Reservation"
-#~ msgstr "Reservar"
+#. Template Name of the plugin/theme
+msgid "About Us"
+msgstr "Sobre nosotros"
+
+#. Template Name of the plugin/theme
+msgid "Certificación"
+msgstr ""
+
+#. Template Name of the plugin/theme
+msgid "Event calendar"
+msgstr "Calendario de eventos"
+
+#. Template Name of the plugin/theme
+msgid "Featured Product"
+msgstr "Producto destacado"
+
+#. Template Name of the plugin/theme
+msgid "Full Width (full 12 columns)"
+msgstr "Ancho completo (12 columnas)"
+
+#. Template Name of the plugin/theme
+msgid "Class Schedule"
+msgstr "Horario de Clase"
+
+#. Template Name of the plugin/theme
+msgid "Sidebar Left"
+msgstr "Barra lateral izquierda"
+
+#. Template Name of the plugin/theme
+msgid "Sidebar Right"
+msgstr "Barra lateral derecha"
+
+#. Template Name of the plugin/theme
+msgid "Store"
+msgstr "Tienda"
+
+#. Template Name of the plugin/theme
+msgid "Masaje Tai"
+msgstr ""
+
+#. Template Name of the plugin/theme
+msgid "Teacher Training"
+msgstr "Entrenamiento para profesores"
+
+#~ msgid "Subscribe to our newsletter"
+#~ msgstr "Suscribite a muestro boletín"
