almost all certification partials done

--- a/languages/es_MX.po
+++ b/languages/es_MX.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Mandir\n"
-"POT-Creation-Date: 2017-07-28 18:31-0600\n"
-"PO-Revision-Date: 2017-07-28 18:31-0600\n"
+"POT-Creation-Date: 2017-07-28 19:24-0600\n"
+"PO-Revision-Date: 2017-07-28 20:49-0600\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es_MX\n"
@@ -167,9 +167,20 @@ msgstr "Resultados de la búsqueda para: %s"
 msgid "Pages:"
 msgstr "Páginas:"
 
+#: template-parts/certification/content-certificate.php:10
+msgctxt "Heading for certificate info in template"
+msgid "Certificate"
+msgstr "Reconocimiento"
+
 #: template-parts/certification/content-curriculum.php:7
 msgid "Curriculum"
 msgstr "Currículum"
+
+#: template-parts/certification/content-recs.php:10
+msgid "Recommendation"
+msgid_plural "Recommendations"
+msgstr[0] "Recomendación"
+msgstr[1] "Recomendaciones"
 
 #: template-parts/certification/content-sidebar-orientation.php:12
 msgid "Orientation"
