--- a/languages/mandir.pot
+++ b/languages/mandir.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: Mandir\n"
-"POT-Creation-Date: 2018-10-11 21:02-0600\n"
+"POT-Creation-Date: 2019-01-18 10:44-0600\n"
 "PO-Revision-Date: 2017-04-07 18:41-0600\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -16,8 +16,8 @@ msgstr ""
 "X-Poedit-WPHeader: style.css\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;"
-"_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
+"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
@@ -410,6 +410,10 @@ msgstr ""
 
 #: template-parts/team/content-event-teacher.php:36
 msgid "Teacher:"
+msgstr ""
+
+#: template-parts/video/filters.php:40
+msgid "Search"
 msgstr ""
 
 #. Theme Name of the plugin/theme
